# renderbox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW.cmake  FindGLM.cmake
examples/: CMakeLists.txt
examples/generic/lambert-boxes/: CMakeLists.txt
examples/generic/lambert-boxes/src/: main.cpp
examples/generic/lambert-spheres/: CMakeLists.txt
examples/generic/lambert-spheres/src/: main.cpp
examples/generic/mrbrain/: CMakeLists.txt
examples/generic/mrbrain/src/: main.cpp
examples/generic/objloader/: CMakeLists.txt
examples/generic/spectral/: CMakeLists.txt
examples/generic/voxels/: CMakeLists.txt
examples/generic/voxels/src/: main.cpp
examples/glsl-preprocessor/: CMakeLists.txt
examples/glsl-preprocessor/src/: main.cpp
examples/glsl-preprocessor/src/shaders/: shader.glsl
examples/ios/CubeExample/CubeExample.xcodeproj/: project.pbxproj
examples/ios/vox-ios/: main.cpp
examples/ios/vox-ios.xcodeproj/: project.pbxproj
examples/mrbrain/: CMakeLists.txt
examples/mrbrain/src/: MRBrain.info  main.cpp
examples/objloader/: CMakeLists.txt
examples/objloader/src/: main.cpp  suzanne.mtl
examples/spectral/src/: main.cpp
examples/spectral/util/: usgs-spectral-albedo.py
examples/voxels/src/: main.cpp
include/: AnimationAction.h  AnimationClip.h  AnimationMixer.h  Bone.h  BoxGeometry.h  Camera.h  CameraProperties.h  Curve.h  CurveGeometry.h  FBXLoader.h  FBXParameterTypes.def  GLFWOpenGLRenderTarget.h  GLSLMaterial.h  GLSLPreprocessor.h  GLSLShaderMaterial.h  GLSLTokenKinds.def  Geometry.h  KeyframeTrack.h  Light.h  MTLTokenKinds.def  Material.h  Matrix.h  Mesh.h  MeshBasicMaterial.h  MeshGeometry.h  MeshLambertMaterial.h  MetalBuffer.h  MetalDeviceRendererProperties.h  MetalObjectProperties.h  MetalRenderList.h  MetalRenderPipelineState.h  MetalRenderer.h  MetalRendererProperties.h  MetalTexture.h  OBJLoader.h  OBJTokenKinds.def  Object.h  ObjectProperties.h  OpenGL.h  OpenGLBuffer.h  (+34 more)
ios/vox-ios/: main.cpp
ios/vox-ios.xcodeproj/: project.pbxproj
ios/vox-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
renderbox/: renderbox.h
renderbox/cameras/: Camera.h  PerspectiveCamera.cpp
renderbox/core/: Object.h
renderbox/geometries/: BoxGeometry.cpp  Geometry.cpp  Geometry.h  VoxelGeometry.cpp
renderbox/materials/: MeshLambertMaterial.cpp  MeshLambertMaterial.h
renderbox/math/: Vector.cpp  Vector.h
renderbox/renderers/: CameraProperties.cpp
renderbox/renderers/opengl/: OpenGLBuffer.h  OpenGLObjectProperties.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRendererProperties.cpp  OpenGLRendererProperties.h  OpenGLVertexArray.h
shaders/: debug_vert.glsl  terrain_frag.glsl  terrain_vert.glsl
src/: main.cpp
src/animation/: AnimationAction.cpp  AnimationMixer.cpp  KeyframeTrack.cpp  PropertyMixer.cpp
src/cameras/: Camera.cpp  PerspectiveCamera.cpp
src/core/: CatmullRomSpline.cpp  CubicHermiteSpline.cpp  CubicSpline.cpp  Curve.cpp  Object.cpp  ParameterMappedCurve.cpp
src/geometries/: BoxGeometry.cpp  CurveGeometry.cpp  Geometry.cpp  MeshGeometry.cpp  SphereGeometry.cpp  VoxelGeometry.cpp
src/glsl/: GLSLPreprocessor.cpp
src/glsl/shaders/: begin_vert.glsl  common.glsl  glposition_vert.glsl  lights_preamble.glsl  worldnormal_vert.glsl  worldposition_vert.glsl
src/loaders/: FBXLoader.cpp  OBJLoader.cpp
src/materials/: GLSLMaterial.cpp  GLSLShaderMaterial.cpp  Material.cpp  MeshBasicMaterial.cpp  MeshLambertMaterial.cpp
src/math/: Matrix.cpp  Ray.cpp  Vector.cpp
src/objects/: Bone.cpp  Mesh.cpp  SkinnedMesh.cpp  SkinnedObject.cpp
src/renderbox/: renderbox.h
src/renderbox/cameras/: Camera.cpp  Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/renderbox/core/: Object.cpp  Object.h
src/renderbox/geometries/: BoxGeometry.cpp  BoxGeometry.h  Geometry.cpp  Geometry.h  VoxelGeometry.cpp  VoxelGeometry.h
src/renderbox/materials/: GLSLShaderMaterial.cpp  GLSLShaderMaterial.h  Material.cpp  Material.h  MeshBasicMaterial.cpp  MeshBasicMaterial.h  MeshLambertMaterial.h
src/renderbox/math/: Matrix.h  Ray.cpp  Ray.h  Vector.h
src/renderbox/objects/: Mesh.cpp  Mesh.h
src/renderbox/renderers/: CameraProperties.h  ObjectProperties.h
src/renderbox/scenes/: Scene.h
src/renderers/metal/: MetalBuffer.mm  MetalDeviceRendererProperties.mm  MetalObjectProperties.mm  MetalRenderList.mm  MetalRenderPipelineState.mm  MetalRenderer.mm  MetalRendererProperties.mm  MetalTexture.mm
src/renderers/opengl/: OpenGLBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLGeometryProperties.cpp  OpenGLMaterialProperties.cpp  OpenGLObjectProperties.cpp  OpenGLProgram.cpp  OpenGLRenderList.cpp  OpenGLRenderTarget.cpp  OpenGLRenderer.cpp  OpenGLRendererProperties.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/scenes/: Scene.cpp
src/textures/: Texture.cpp
src/utils/: logging.cpp
util/: black-body-radiation.py
(+87 files in other folders)
